--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,7 @@
     width: 100%;
     height: 500px;
     background-image: url("../images/hero-image.jpg");
+    margin: 0;
 }
 .start {
     display: inline;
@@ -47,5 +48,33 @@
 
 .everydaycat {
     position: relative;
-    left: 10%;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 10%;
+    line-height: 1.5;
+}
+
+.grid1 {
+    display: grid;
+    grid-template-columns: repeat(3, 250px);
+    grid-template-rows: 200px;
+    position: relative;
+    vertical-align: middle;
+    grid-column-gap: 30px;
+    padding-top: 30px;
+    justify-content: center;
+}
+
+.grid11 {
+    background-color: blue;
+}
+.grid12 {
+    background-color: green;
+}
+.grid13 {
+    background-color: red;
+}
+.underphoto1{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-size: 14px;
 }
