--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 .orangeheader {
     position: relative;
-    width: 100%;
+    width: auto;
     height: 100px;
     background-color: rgb(252, 198, 98);
 }
@@ -28,7 +28,7 @@
     bottom: 15px;
 }
 .photo1 {
-    width: 100%;
+    width: auto;
     height: 500px;
     background-image: url("../images/hero-image.jpg");
     margin: 0;
@@ -43,13 +43,6 @@
     padding: 15px 15px 15px 15px;
     left: 400px;
     top: 380px;
-}
-
-.everydaycat {
-    position: relative;
-    font-family: Arial, Helvetica, sans-serif;
-    padding-left: 10%;
-    line-height: 1.5;
 }
 
 .grid1 {
@@ -86,7 +79,7 @@
     padding-top: 30px;
 }
 .healthy, .healthyy {
-    padding-left: 90px;
+    padding-left: 150px;
     font-family: Arial, Helvetica, sans-serif;
 }
 .grid2 {
@@ -118,4 +111,22 @@
     background-color: white;
     padding: 10px;
     bottom: 14px;
+}
+.parastuff {
+    position: relative;
+    padding-left: 50px;
+}
+
+.menu2 {
+    display: inline;
+    position: relative;
+    top: 40px;
+    padding-right: 20px;
+    padding-left: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+}
+.copy {
+    padding-right: 500px;
+    padding-left: 30px;
 }
