--- a/css/index.css
+++ b/css/index.css
@@ -1,32 +1,21 @@
-.orangeheader {
-    position: relative;
-    width: auto;
+.header {
     height: 100px;
-    background-color: rgb(252, 198, 98);
+    width: 100%;
+    background-color: orange;
+    display: grid;
+    grid-template-columns: 5fr 1fr 1fr 1fr 1fr;
+    position: relative;
 }
 .logo {
-    position: relative;
-    left: 34px;
-    top: 18px;
-    height: 70px;
+    height: 80px;
+    padding-top: 13px;
+    padding-left: 30px;
 }
 .menu {
-    display: inline;
-    position: relative;
+    padding-top: 40px;
     font-family: Arial, Helvetica, sans-serif;
 }
-.poprec {
-    left: 480px;
-    bottom: 15px;
-}
-.whatsnew {
-    left: 520px;
-    bottom: 15px;
-}
-.categories {
-    left: 560px;
-    bottom: 15px;
-}
+
 .photo1 {
     width: auto;
     height: 500px;
@@ -117,16 +106,25 @@
     padding-left: 50px;
 }
 
-.menu2 {
-    display: inline;
+.footer {
+    height: 100px;
+    width: 100%;
+    background-color: orange;
+    display: grid;
+    grid-template-columns: 5fr 1fr 1fr 1fr 1fr 1fr 1fr;
     position: relative;
-    top: 40px;
-    padding-right: 20px;
-    padding-left: 40px;
+}
+.footmenu {
+    padding-top: 45px;
+    padding-left: 20px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 10px;
 }
 .copy {
-    padding-right: 500px;
-    padding-left: 30px;
+    padding-top: 40px;
+    padding-left: 60px;
+}
+.menu2 {
+    font-size: 10px;
+    padding-left: 40px;
+    margin-right: -20px;
 }
