--- a/css/recipe.css
+++ b/css/recipe.css
@@ -1,31 +1,19 @@
-.orangeheader {
-    position: relative;
-    min-width: 100%;
+.header {
     height: 100px;
-    background-color: rgb(252, 198, 98);
+    width: 100%;
+    background-color: orange;
+    display: grid;
+    grid-template-columns: 5fr 1fr 1fr 1fr 1fr;
+    position: relative;
 }
 .logo {
-    position: relative;
-    left: 34px;
-    top: 18px;
-    height: 70px;
+    height: 80px;
+    padding-top: 13px;
+    padding-left: 30px;
 }
 .menu {
-    display: inline;
-    position: relative;
+    padding-top: 40px;
     font-family: Arial, Helvetica, sans-serif;
-}
-.poprec {
-    left: 480px;
-    bottom: 15px;
-}
-.whatsnew {
-    left: 520px;
-    bottom: 15px;
-}
-.categories {
-    left: 560px;
-    bottom: 15px;
 }
 
 .photo1 {
