added another section

--- a/css/recipe.css
+++ b/css/recipe.css
@@ -46,3 +46,31 @@
     padding-right: 130px;
 }
 
+.bengal {
+    position: relative;
+    padding-left: 38%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 25px;
+}
+.nomoredry {
+    background-color: rgb(212, 212, 212);
+    margin: 0 80px 0 80px;
+}
+.nomoredryy {
+    position: relative;
+    padding-left: 25%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+}
