--- a/css/recipe.css
+++ b/css/recipe.css
@@ -74,3 +74,46 @@
     grid-template-columns: 1fr 1fr;
     width: 100%;
 }
+.label2 {
+    position: relative;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 25px;
+    margin-bottom: -30px;
+}
+.list {
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5;
+}
+.spicemix {
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: -500px;
+}
+.spicemixx {
+    margin-bottom: -10px;
+}
+
+.footer {
+    height: 100px;
+    width: 100%;
+    background-color: orange;
+    display: grid;
+    grid-template-columns: 5fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    position: relative;
+}
+.footmenu {
+    padding-top: 45px;
+    padding-left: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.copy {
+    padding-top: 40px;
+    padding-left: 60px;
+}
+.menu2 {
+    font-size: 10px;
+    padding-left: 40px;
+    margin-right: -20px;
+}
