--- a/css/style.css
+++ b/css/style.css
@@ -133,3 +133,82 @@
     padding-left: 40px;
     margin-right: -20px;
 }
+.photo2 {
+    width: auto;
+    height: 500px;
+    background-image: url("../images/RYPARIS_recipe.png");
+    margin: 0;
+    position: relative;
+}
+
+.timestuff {
+    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 20px;
+    background-color: rgb(214, 214, 214);
+    padding-top: 10px;
+    }
+.time {
+    position: relative;
+    padding-left: 100px;
+}
+.label {
+    font-weight: bold;
+    position: relative;
+    padding-right: 10px;
+    padding-left: 100px;
+}
+.info {
+    position: relative;
+    padding-right: 130px;
+}
+
+.bengal {
+    position: relative;
+    padding-left: 38%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 25px;
+}
+.nomoredry {
+    background-color: rgb(212, 212, 212);
+    margin: 0 80px 0 80px;
+}
+.nomoredryy {
+    position: relative;
+    padding-left: 25%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+}
+.label2 {
+    position: relative;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 25px;
+    margin-bottom: -30px;
+}
+.list {
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5;
+}
+.spicemix {
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: -650px;
+}
+.spicemixx {
+    margin-bottom: -10px;
+}
+
